drop shadow added. picture changed

--- a/html/filled.html
+++ b/html/filled.html
@@ -55,7 +55,7 @@
 
 
     <!--top background-->
-          <div class="bg">
+          <div class="bg-filled">
             <div class="bg-text">Filled PTFE</div>
             <div class="bg-title">Infusion Of Pure PTFE with other compounds</div>
           </div>
