--- a/html/contact.html
+++ b/html/contact.html
@@ -42,10 +42,10 @@
                           <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link active" href="application.html">Application</a>
+                          <a class="nav-link" href="application.html">Application</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="contact.html">Contact</a>
+                          <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
               </div>
