add thanks page

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,18 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
 
-    <!--custom css-->
-
-    <!--end custom css-->
 
     <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <!--End External Links-->
 
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../font-icons/css/newIcons.css">
     <link rel="shortcut icon" href="../images/branding/icon.ico">
     <title>Contact us</title>
   </head>
@@ -54,17 +50,23 @@
     <!--end navigation-->
 
 
-    <div class="form bg-jumbotron">
-      <h1 class="display-4 text-red text-center">Contact Us</h1>
-      <form action="https://submit-form.com/iiJ4XII7OvQcBsA_fZE7y" target="_self">
-         <!-- All elements must have a name attribute -->
-         <input type="text" class="form-control top" name="Name" placeholder="Name" required>
-         <input type="email" class="form-control middle" name="email" placeholder="Email" required>
-         <textarea name="message" class="form-control bottom" placeholder="Message" rows="6" required></textarea>
-         <!-- A button of type submit -->
-         <button type="submit" class="btn bg-red text-white btn-lg">Message Us</button>
-      </form>
-    </div>
+  <div class="form bg-jumbotron">
+    <h1 class="display-4 text-red text-center"><i class="icon-mail"></i>Contact Us</h1><br>
+    <form action="https://submit-form.com/pXQhhRwshf4Qd_bn6v_x2" target="_self">
+       <!-- All elements must have a name attribute -->
+        <input
+           type="hidden"
+           name="_redirect"
+           value="bbengineering.in/html/thanks.html"
+         />
+       <input type="text" class="form-control top" name="Name" placeholder="Name" required>
+       <input type="email" class="form-control middle" name="email" placeholder="Email" required>
+       <textarea name="message" class="form-control bottom" placeholder="Message" rows="6" required></textarea>
+       <!-- A button of type submit -->
+       <button type="submit" class="btn bg-red text-white btn-lg">Message Us</button>
+    </form>
+  </div>
+
 
 
     <!---footer--->
@@ -72,19 +74,21 @@
         <div class="container-fluid padding">
           <div class="row text-center">
             <div class="col-12">
-              <p>555-555-555</p>
-              <p>email@myemail.com</p>
-              <p>100 Street Name</p>
-              <p>Kolkata 700-059</p>
+              <p>bbengineering.in@gmail.com</p>
+              <p>Hatiara , New town</p>
+              <p>Kolkata 700-157</p>
               <p>West Bengal</p>
             </div>
             <div class="col-12">
                 <hr class="light">
-                <h5>&copy; bbengineering.com</h5>
+                <h5>&copy; bbengineering.in</h5>
             </div>
           </div>
         </div>
       </footer>
     <!--end footer-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
     </html>
