--- a/html/filled.html
+++ b/html/filled.html
@@ -432,18 +432,17 @@
 
 <!---footer--->
   <footer>
-    <div class="container-fluid">
+    <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-12">
-          <p>555-555-555</p>
-          <p>email@myemail.com</p>
-          <p>100 Street Name</p>
-          <p>Kolkata 700-059</p>
+          <p>bbengineering.in@gmail.com</p>
+          <p>Hatiara , New town</p>
+          <p>Kolkata 700-157</p>
           <p>West Bengal</p>
         </div>
         <div class="col-12">
             <hr class="light">
-            <h5>&copy; bbengineering.com</h5>
+            <h5>&copy; bbengineering.in</h5>
         </div>
       </div>
     </div>
