--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
 
     <!--custom css-->
+    <link rel="stylesheet" href="font-icons/css/newIcons.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
     <!--end custom css-->
 
     <!--External Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/cf15542e4f.js" crossorigin="anonymous"></script>
+
     <!--End External Links-->
 
     <link rel="shortcut icon" href="images/branding/icon.ico">
@@ -83,9 +81,10 @@
     <div class="container-fluid">
       <div class="row bg-jumbotron jumbotron">
         <div class="col-xs-12 col-sm-md-9 col-lg-9 col-xl-10">
-          <p class="lead">We are a PTFE products manufacturer.
-            Our products range from simple PTFE gears sliders and things
-            bearings etc that I do not know About. right now.</p>
+          <p class="lead">We are trader, supplier and manufacturer of industrial PTFE and other
+            polymer products in India. Known for their high tensile strength, dimensional accuracy,
+            updated technology and high quality, we are offering these products in customized specifications.
+          </p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
           <a href="html/products.html"><button type="button" class="btn btn-outline-red btn-lg">
@@ -97,7 +96,7 @@
 
   <!---Two Column Ptfe section--->
           <div class="container-fluid padding">
-              <div class="row">
+              <div class="row container-fluid" style="padding-left:3%; padding-right:3%;">
                 <div class="col-lg-6">
                   <h2 class="display-4 text-red">PTFE-Polytetra Fluoro Ethylene</h2>
                   <p class="lead">PTFE is often required for critical
@@ -145,19 +144,19 @@
         <div class="container fluid">
           <div class="row text-center">
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <i class="fas fa-plane"></i>
+              <i class="icon-plane"></i>
               <h3>Aerospace</h3>
               <p class="lead">PTFE materials are able to retain their outstanding
                 material properties even when exposed to high temperatures and aggressive fuels.</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <i class="fas fa-car"></i>
+              <i class="icon-car"></i>
               <h3>Automobile</h3>
               <p class="lead">These fluoroplastics are able to maintain their outstanding material properties
                 even when exposed to high temperatures and/or aggressive fuels. </p>
             </div>
             <div class="col-sm-12 col-md-4">
-              <i class="fas fa-plus"></i>
+              <i class="icon-plus"></i>
               <h3>Medical</h3>
               <p class="lead"> Applications in the (semi) Medical industry require clean, smooth, non-toxic and non-allergenic materials.  </p>
             </div>
@@ -170,25 +169,49 @@
         <!--end three column icon section-->
       </div>
       <!--end Trust section-->
-
-    <!---footer--->
-      <footer>
-        <div class="container-fluid">
-          <div class="row text-center">
-            <div class="col-12">
-              <p>555-555-555</p>
-              <p>email@myemail.com</p>
-              <p>100 Street Name</p>
-              <p>Kolkata 700-059</p>
-              <p>West Bengal</p>
-            </div>
-            <div class="col-12">
-                <hr class="light">
-                <h5>&copy; bbengineering.com</h5>
-            </div>
+      <div class="container-fluid padding">
+        <div class="row text-red text-center">
+          <div class="col-12">
+            <i class="icon-users"></i>
+            <h1 class="display-4">About us</h1>
           </div>
         </div>
-      </footer>
-    <!--end footer-->
+
+        <div class="row">
+          <div class="col-10 m-auto">
+              <p class="lead"> Established in the year 1980, we <strong>B B ENGINEERING</strong> is engaged in manufacturing and supplying a wide range of
+                industrial PTFE and polymer products. Our range includes Teflon, nylon, polypropylene, Delrin-POM- Polyacetal ,
+                HDPE, Hylam, Acrylic and many more. Our range is acknowledged for its high performance, high tensile strength,
+                corrosion resistance finish and durability. Our business oriented approach and indepth knowledge of our domain has helped us
+                in climbing the ladder of success and helps in achieving complete client satisfaction. Further, with the help of experienced procuring
+                agents, we are able to source our range of products from reliable vendors of the market. We also conduct various qualities
+                checking on our part to ensure that only flawless products reach our esteemed clients. Owing to our experience and wide distribution network,
+                we are able to provide our products at most competitive prices in the stipulated time period. We welcome queries for Industrial PTFE products
+                from any part of India.</p>
+          </div>
+        </div>
+      </div>
+      <!---footer--->
+        <footer>
+          <div class="container-fluid padding">
+            <div class="row text-center">
+              <div class="col-12">
+                <p>bbengineering.in@gmail.com</p>
+                <p>Hatiara , New town</p>
+                <p>Kolkata 700-157</p>
+                <p>West Bengal</p>
+              </div>
+              <div class="col-12">
+                  <hr class="light">
+                  <h5>&copy; bbengineering.in</h5>
+              </div>
+            </div>
+          </div>
+        </footer>
+      <!--end footer-->
+
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
