--- a/html/ptfe.html
+++ b/html/ptfe.html
@@ -176,24 +176,23 @@
 
 
 
-    <!---footer--->
-      <footer>
-        <div class="container-fluid padding">
-          <div class="row text-center">
-            <div class="col-12">
-              <p>555-555-555</p>
-              <p>email@myemail.com</p>
-              <p>100 Street Name</p>
-              <p>Kolkata 700-059</p>
-              <p>West Bengal</p>
-            </div>
-            <div class="col-12">
-                <hr class="light">
-                <h5>&copy; bbengineering.com</h5>
-            </div>
-          </div>
+<!---footer--->
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-12">
+          <p>bbengineering.in@gmail.com</p>
+          <p>Hatiara , New town</p>
+          <p>Kolkata 700-157</p>
+          <p>West Bengal</p>
         </div>
-      </footer>
-    <!--end footer-->
+        <div class="col-12">
+            <hr class="light">
+            <h5>&copy; bbengineering.in</h5>
+        </div>
+      </div>
+    </div>
+  </footer>
+<!--end footer-->
 </body>
 </html>
